@@ -59,8 +59,8 @@ $theme_color = isset($_SESSION['user_theme'])
 $tpl = new pTemplate();
 
 if ((Config::get('MAINTENANCEMODE')
-	|| databaseUpdate::getInstance()->checkUpdateExists()
-	|| criticalUpdate::getInstance()->checkUpdateExists())
+		|| databaseUpdate::getInstance()->checkUpdateExists()
+		|| criticalUpdate::getInstance()->checkUpdateExists())
 	&& !isset($_GET['admin'])) {
 
 	$tpl->define_dynamic('page', Config::get('LOGIN_TEMPLATE_PATH') . '/maintenancemode.tpl');
