@@ -1157,3 +1157,4 @@ User data updated! = Benutzerdaten wurden erfolgreich aktualisiert!
 User data not updated! = Benutzerdaten wurden nicht aktualisiert!
 This user has domain record !<br>First remove the domain from the system! = Dieser Benutzer besitzt Domains!<br />Löschen Sie diese zuerst!
 User not terminated! = Benutzer wurde nicht gelöscht!
+Show server load = Zeige Serverauslastung
